[project]
name = "tcal_pyscf"
version = "1.0.0"
description = "PySCF-based implementation of transfer integral calculations for anthracene dimer"
dependencies = [
    "numpy",
    "pyscf",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["tcal"]

[tool.setuptools.packages.find]
where = ["src"]